# hookprobe

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .shellcheckrc  3rd-party-licenses.md  ARCHITECTURAL-ASSESSMENT.md  ARCHITECTURE.md  CHANGELOG.md  CI-CD-SUMMARY.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_ANALYSIS_AND_FIXES.md  CONTRIBUTING.md  DOCUMENTATION-INDEX.md  GDPR.md  IMPLEMENTATION-SUMMARY-PHASE1-2.md  LICENSE  LICENSING.md  MANIFESTO.md  Makefile  PR_DESCRIPTION.md  QUICK-START.md  README.md  SECURITY.md  SOFTWARE-TESTING-STRATEGY.md  TESTING-VALIDATION-REPORT.md  THANK-YOU.md  UNIFIED-INSTALL-SYSTEM.md  docker-compose.test.yml  hookprobe-r&d.md  install-sentinel-lite.sh  install-validator.sh  install.sh  pytest.ini  requirements-dev.txt  requirements.txt  uninstall.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  markdown-link-check-config.json
Documents/: PythonScriptWebApp.md  README.md  SecurityMitigationPlan.md  WebApp.md
LTE/: README.md
Scripts/: app_BackUP_DB.sh  app_Restore_DB.sh  network-config.sh  setup-sh-v1.2.sh  setup.sh  uninstall.sh
assets/: README.md  readme.md
backend/: README.md
config/: axon-z-phase1.yaml  dsm-phase1.yaml  gdpr-config.sh  mitigation-config.conf  neuro-phase1.yaml
core/: README.md  __init__.py  agency_shim.py
core/napse/engine/: Cargo.toml  DEPRECATED.md  pyproject.toml
core/napse/engine/src/: community_id.rs  conntrack.rs  lib.rs
core/napse/engine/src/matcher/: mod.rs
core/napse/engine/src/ml/: mod.rs
core/napse/engine/src/protocols/: dhcp.rs  dns.rs  http.rs  mdns.rs  mod.rs  ssh.rs  tcp.rs  tls.rs
core/napse/engine/tests/: pcap_replay.rs
deploy/: LICENSE  README.md
docs/: CHANGELOG-CICD.md  CI-CD.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD-IMPLEMENTATION-PLAN.md  DOCUMENTATION-INDEX.md  GDPR.md  HTP_KEYLESS_PROTOCOL_ANALYSIS.md  HTP_QUANTUM_CRYPTOGRAPHY.md  HTP_SECURITY_ENHANCEMENTS.md  IAM-INTEGRATION-GUIDE.md  INSTALLATION_CLEANUP_PLAN.md  INTERFACE-SECURITY-CONTROLS.md  SECURITY.md  conf.py  index.rst  requirements.txt
html/: blog-single-v1.html  landing-saas-v2.html
infrastructure/: README.md
n8n/: AI-blogging-workflow.md  README.md  integration-checklist.md  n8n_network-config.sh  n8n_setup.sh  n8n_uninstall.sh
sdk/python/: pyproject.toml
sdk/python/hookprobe/: __init__.py  client.py
(+1561 files in other folders)
