[package]
name = "napse-engine"
version = "1.0.0"
edition = "2021"
authors = ["HookProbe Team <qsecbit@hookprobe.com>"]
description = "NAPSE Protocol Engine - Neural Adaptive Packet Synthesis Engine"
license = "LicenseRef-Proprietary"

[lib]
name = "napse_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
aho-corasick = "1.1"
dashmap = "6"
md-5 = "0.10"
sha2 = "0.10"
crc = "3"
bytes = "1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.ort]
version = "2"
optional = true
features = ["half"]

[features]
default = []
ml = ["dep:ort"]
hyperscan = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
